[gd_scene load_steps=9 format=2]

[ext_resource path="res://UI/GameOverScreen.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/TitleScreen.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/SettingsScreen.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/Screens.gd" type="Script" id=4]
[ext_resource path="res://assets/audio/menu_click.wav" type="AudioStream" id=5]
[ext_resource path="res://UI/SkinsScreen.tscn" type="PackedScene" id=6]
[ext_resource path="res://UI/FirstPlayScreen.tscn" type="PackedScene" id=7]
[ext_resource path="res://UI/LeaderboardScreen.tscn" type="PackedScene" id=8]

[node name="Screens" type="Node"]
script = ExtResource( 4 )

[node name="GameOverScreen" parent="." instance=ExtResource( 1 )]

[node name="SettingsScreen" parent="." instance=ExtResource( 3 )]

[node name="TitleScreen" parent="." instance=ExtResource( 2 )]

[node name="SkinsScreen" parent="." instance=ExtResource( 6 )]

[node name="FirstPlayScreen" parent="." instance=ExtResource( 7 )]

[node name="LeaderboardScreen" parent="." instance=ExtResource( 8 )]

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[editable path="SettingsScreen"]
